--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -559,3 +559,15 @@ skill_longdeliliang: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@ma
 skill_kuanglongzhuilie: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_003.mp3'
 skill_huolongdetiequan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_002.mp3'
 skill_huolongdepaoxiao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_001.mp3'
+skill_yingxi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_001.mp3'
+skill_anhua: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_002.mp3'
+skill_anxi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_002.mp3'
+skill_anti: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_001.mp3'
+skill_anci: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_003.mp3'
+skill_yemu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_002.mp3'
+skill_anyan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_001.mp3'
+skill_bianpaozhalei: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_003.mp3'
+skill_anzhiguang: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_003.mp3'
+skill_anzhishang: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_001.mp3'
+skill_anzhishui: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_001.mp3'
+skill_anyeshisha: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/10983.mp3'
