--- a/data/effect_global.yaml
+++ b/data/effect_global.yaml
@@ -15,17 +15,10 @@
             - type: select
               arg: element
         evaluator:
-          type: same
-          value: Grass
-      - type: evaluate
-        target:
-          base: usingSkillContext
-          chain:
-            - type: select
-              arg: element
-        evaluator:
-          type: same
-          value: Light
+          type: anyOf
+          value:
+            - Grass
+            - Light
   apply:
     type: amplifyPower
     target: usingSkillContext
@@ -68,6 +61,7 @@
     type: amplifyPower
     target: usingSkillContext
     value: 1.35
+# 夜幕：暗影系和特质系技能的威力增加35%
 - id: effect_global_power_35_percent_shadow_trait
   trigger: AfterUseSkillCheck
   priority: 0
@@ -81,17 +75,10 @@
             - type: select
               arg: element
         evaluator:
-          type: same
-          value: Shadow
-      - type: evaluate
-        target:
-          base: usingSkillContext
-          chain:
-            - type: select
-              arg: element
-        evaluator:
-          type: same
-          value: Trait
+          type: anyOf
+          value:
+            - Shadow
+            - Trait
   apply:
     type: amplifyPower
     target: usingSkillContext
