--- a/data/mark.yaml
+++ b/data/mark.yaml
@@ -629,6 +629,16 @@
 - id: mark_huoxishanghaizengjia
 - id: mark_zaochengshanghaijianshao
 - id: mark_shoudaoshanghaizengjia
+  config:
+    duration: -1
+    persistent: true
+    maxStacks: 100
+    stackable: true
+    stackStrategy: extend
+    destroyable: true
+    keepOnSwitchOut: true
+  effect:
+    - effect_mark_add_damage_taken_with_stack
 - id: mark_suijixianzhi
   config:
     duration: 5
@@ -888,7 +898,7 @@
     duration: -1
     persistent: true
     maxStacks: 114514
-    stackable: false
+    stackable: true
     stackStrategy: max
     destroyable: true
     isShield: false
@@ -1735,3 +1745,38 @@
     - status
   effect:
     - effect_mark_longlinjia_reflect_damage_50_percent
+- id: mark_heianwuzhi
+  config:
+    duration: -1
+    persistent: true
+    maxStacks: 3
+    stackable: true
+    stackStrategy: stack
+    destroyable: true
+    keepOnSwitchOut: true
+  effect:
+    - effect_mark_reduce_accuracy_5_per_stack
+- id: mark_yingfeng
+  config:
+    duration: -1
+    persistent: true
+    maxStacks: 1
+    stackable: false
+    stackStrategy: none
+    destroyable: true
+    keepOnSwitchOut: true
+  effect:
+    - effect_mark_evade
+    - effect_mark_yingfeng_heal_50_on_evasion_in_yemu
+    - effect_mark_yingfeng_destroy_on_hit_or_miss
+- id: mark_buxieanguang
+  config:
+    duration: 1
+    persistent: false
+    maxStacks: 1
+    stackable: true
+    stackStrategy: refresh
+    destroyable: true
+    keepOnSwitchOut: false
+  effect:
+    - effect_mark_buxieanguang_reduce_light_damage_half # TODO
