--- a/data/mark_ability.yaml
+++ b/data/mark_ability.yaml
@@ -212,3 +212,14 @@
     - effect_ability_fennu_power_boost_25_percent_when_full_rage
     - effect_ability_fennu_power_boost_15_percent_when_rage_greater_than_70
     - effect_ability_fennu_power_boost_10_percent_when_rage_between_50_and_70 # 满怒气时威力增加25% >70点时增加15% >50点时增加10%
+- id: mark_ability_yexing
+  config: *ability_config
+  tags: [ability]
+  effect:
+    - effect_ability_set_field_yemu_on_switch
+- id: mark_ability_yeji
+  config: *ability_config
+  tags: [ability]
+  effect:
+    - effect_ability_set_field_yemu_on_switch
+    - effect_ability_add_mark_buxieanguang_on_switch
