--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -1,8 +1,3 @@
-# 埃鲁系列状态图片
-mark_jieli: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3260.png'
-mark_dadizhiyou: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3261.png'
-mark_shabaozhili: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3262.png'
-mark_taitanzhihu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3254.png'
 stat_stage_atk_down: https://seer2-resource.yuuinih.com/png/traitMark/atk_dec.png
 stat_stage_def_down: https://seer2-resource.yuuinih.com/png/traitMark/defense_dec.png
 stat_stage_spa_down: https://seer2-resource.yuuinih.com/png/traitMark/specialAtk_dec.png
@@ -183,3 +178,10 @@ mark_fenshen: 'https://seer2-resource.yuuinih.com/png/markImage/3184.png'
 mark_fenshenhying: 'https://seer2-resource.yuuinih.com/png/markImage/3185.png'
 mark_huafenmiman: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3200.png'
 mark_longlinjia: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/4013.png'
+mark_jieli: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3260.png'
+mark_dadizhiyou: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3261.png'
+mark_shabaozhili: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3262.png'
+mark_taitanzhihu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3254.png'
+mark_heianwuzhi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3167.png'
+mark_yingfeng: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3168.png'
+mark_buxieanguang: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/4021.png'
