--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -571,3 +571,7 @@ skill_anzhiguang: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/
 skill_anzhishang: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_001.mp3'
 skill_anzhishui: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_001.mp3'
 skill_anyeshisha: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/10983.mp3'
+skill_zhiheiyi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_002.mp3'
+skill_anzhiyi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_002.mp3'
+skill_yingfeng: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_001.mp3'
+skill_yijieheian: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_002.mp3'
