--- a/data/effect_mark.yaml
+++ b/data/effect_mark.yaml
@@ -648,7 +648,7 @@
   trigger: BeforeUseSkillCheck
   priority: 0
   condition:
-    type: foeUseSkill
+    type: selfBeSkillTarget
   apply:
     type: setSureMiss
     target: usingSkillContext
@@ -657,7 +657,7 @@
   trigger: BeforeUseSkillCheck
   priority: 0
   condition:
-    type: foeUseSkill
+    type: selfBeSkillTarget
   apply:
     type: setSureMiss
     target: usingSkillContext
