--- a/packages/cli-validator/tsconfig.json
+++ b/packages/cli-validator/tsconfig.json
@@ -1,17 +1,19 @@
 {
-  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./dist",
-    "rootDir": "./src",
+    "baseUrl": ".",
+    "composite": true,
+    "lib": ["ESNext"],
+    "module": "ESNext",
+    "target": "ESNext",
+    "outDir": "./dist/",
+    "verbatimModuleSyntax": true,
+    "moduleResolution": "bundler",
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
     "declaration": true,
     "declarationMap": true,
-    "sourceMap": true
+    "types": ["node"]
   },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "dist",
-    "node_modules"
-  ]
+  "include": ["./src/**/*"],
+  "exclude": ["./node_modules", "./dist"]
 }
