--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -6276,7 +6276,7 @@
   power: 75
   rage: 15
   accuracy: 95
-  sureHit: true
+  sureHit: false
   ignoreShield: false
   tags: []
   effect:
@@ -6288,7 +6288,7 @@
   power: 80
   rage: 15
   accuracy: 95
-  sureHit: true
+  sureHit: false
   ignoreShield: false
   tags: []
   effect:
@@ -6301,7 +6301,7 @@
   power: 80
   rage: 20
   accuracy: 95
-  sureHit: true
+  sureHit: false
   ignoreShield: false
   tags: []
   effect:
@@ -6313,7 +6313,7 @@
   power: 85
   rage: 20
   accuracy: 95
-  sureHit: true
+  sureHit: false
   ignoreShield: false
   tags: []
   effect:
@@ -6338,7 +6338,7 @@
   power: 85
   rage: 20
   accuracy: 95
-  sureHit: true
+  sureHit: false
   ignoreShield: false
   tags: []
   effect:
@@ -6350,7 +6350,7 @@
   power: 90
   rage: 20
   accuracy: 95
-  sureHit: true
+  sureHit: false
   ignoreShield: false
   tags: []
   effect:
@@ -6388,7 +6388,7 @@
   power: 90
   rage: 30
   accuracy: 95
-  sureHit: true
+  sureHit: false
   ignoreShield: false
   tags: []
   effect:
@@ -6400,7 +6400,7 @@
   power: 95
   rage: 30
   accuracy: 95
-  sureHit: true
+  sureHit: false
   ignoreShield: false
   tags: []
   effect:
