--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -18,7 +18,9 @@
     "lint": "run-s lint:*",
     "format": "prettier --write src/",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "dev:tauri": "VITE_IS_TAURI=true vite",
+    "build:tauri": "VITE_IS_TAURI=true vite build"
   },
   "dependencies": {
     "@anatine/zod-mock": "^3.14.0",
@@ -76,6 +78,7 @@
     "@storybook/test": "^8.6.14",
     "@storybook/vue3": "^9.0.13",
     "@storybook/vue3-vite": "^9.0.13",
+    "@tauri-apps/cli": "^2.6.1",
     "@tsconfig/node22": "^22.0.2",
     "@types/howler": "^2.2.12",
     "@types/markdown-it": "^14.1.2",
