--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -39,6 +39,9 @@
     "@faker-js/faker": "^9.8.0",
     "@heroicons/vue": "^2.2.0",
     "@tailwindcss/vite": "^4.1.10",
+    "@tauri-apps/api": "^2.6.0",
+    "@tauri-apps/plugin-fs": "^2.4.0",
+    "@tauri-apps/plugin-http": "^2.5.0",
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/slim": "^3.8.1",
     "@tsparticles/vue3": "^3.0.1",
