--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -20,7 +20,8 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "dev:tauri": "VITE_IS_TAURI=true vite",
-    "build:tauri": "VITE_IS_TAURI=true vite build"
+    "build:tauri": "VITE_IS_TAURI=true vite build",
+    "build:dmg": "node scripts/build-dmg.js"
   },
   "dependencies": {
     "@anatine/zod-mock": "^3.14.0",
@@ -42,6 +43,8 @@
     "@tauri-apps/api": "^2.6.0",
     "@tauri-apps/plugin-fs": "^2.4.0",
     "@tauri-apps/plugin-http": "^2.5.0",
+    "@tauri-apps/plugin-process": "^2.3.0",
+    "@tauri-apps/plugin-shell": "~2.3.0",
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/slim": "^3.8.1",
     "@tsparticles/vue3": "^3.0.1",
